tests/parse_print/random_perturb/set01/delete-05/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/delete-05/delete-05.essence:1:10:
  |
1 | language Essene 1.3
  |          ^^^^^^
Syntax Error: Not a valid language name
